--- a/nana_money_calculater.ipynb
+++ b/nana_money_calculater.ipynb
@@ -2,33 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please enter your name\n",
-      "Teller name: lo\n",
-      "You are welcome  lo\n",
-      "Please enter client name\n",
-      "Client_name: lk\n",
-      "client lk is ready to atttend to\n",
-      "\n",
-      "Task Initiated\n",
-      "2020-05-17 22:23:16.193941\n",
-      "Do you prefer to logout: yes\n",
-      "\n",
-      "task completed\n",
-      "\n",
-      "2020-05-17 22:23:18.170475\n",
-      "\n",
-      "Total time =  0.0 hrs\n",
-      "Amount to be paid = $ 0.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import datetime\n",
     "import time\n",
@@ -73,11 +49,10 @@
     "else:\n",
     "    print('no option entered')\n",
     "    print('Please logout first')\n",
-    "    \n",
-    "import pandas as pd\n",
+    "import pandas as pd   \n",
     "l=[start,stop]\n",
-    "k= ['start time','stop time']\n",
-    "df= pd.DataFrame([k,l])\n",
+    "k= {'start time':[start],'stop time':[stop]}\n",
+    "df= pd.DataFrame(k)\n",
     "\n",
     "f = open('customer.csv','a')\n",
     "f.write(str(df))\n",
